--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ASYMTOTE: My Learning curve.
+title: ASYMTOTE My Learning curve.
 author: Sahil Tikale
 email: sahil.tikale@gmail.com
 theme: minima
